# mas-debate

./: main.py  pyproject.toml  skeleton.md
data/stock_data/: semiconductor_data.csv
src/debate_mas/loader/: data_loader.py  dossier.py  stockhunter.py
src/debate_mas/tools/: hunter_tools.py
